Bug 14281 - shutdown panic in clustered mode
Summary: shutdown panic in clustered mode
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Clustering (show other bugs)
Version: 4.12.0rc2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-17 11:39 UTC by Volker Lendecke
Modified: 2020-02-19 08:48 UTC (History)
3 users (show)

See Also:


Attachments
Patchset cherry-picked from master (12.00 KB, patch)
2020-02-19 04:20 UTC, Karolin Seeger
vl: review+
kseeger: review? (metze)
vl: ci-passed+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2020-02-17 11:39:02 UTC
With "clustering=yes" smbd crashes after the client has disconnected
Comment 1 Volker Lendecke 2020-02-17 13:02:37 UTC
See https://gitlab.com/samba-team/samba/-/merge_requests/1149 for the master patch to be backported to 4.12 after it appears in master
Comment 2 Karolin Seeger 2020-02-19 04:20:05 UTC
Created attachment 15798 [details]
Patchset cherry-picked from master
Comment 3 Volker Lendecke 2020-02-19 07:14:45 UTC
Comment on attachment 15798 [details]
Patchset cherry-picked from master

https://gitlab.com/samba-team/devel/samba/pipelines/118982282
Comment 4 Karolin Seeger 2020-02-19 08:48:39 UTC
Pushed to v4-12-test.
Closing out bug report.

Thanks!